create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(192, 163, 117);"></div>
 
@@ -133,7 +133,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-r" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-r" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 4.5rem;">
     <!-- Filter -->
     
 
@@ -348,7 +348,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="oheSq1qWREy/8SWi77fAKBmbTEjKoU6oR3rjbkUXtIjQHhkyFevnAMttEChukH1BzA4Z2HhTDPUTlod8EQRis8l+LyoETeRpZC482nOHUp5K+B66T1QHjNOb04Mwi6s/" data-form-email="true">
+                        <input type="hidden" value="afDfzpfl7TbkQSdQcLKWHKZTmYaK85S6gYS5148wJD+YXakjvF+HOMs8L36k9PBDpWFJf0plc2BtxlbnTabRgGhp9Do+Ogf70HuoMa3xy3fNxMm5ycJdlnc6Z5LQ0ATi" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
