--- a/design.html
+++ b/design.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x105.png" type="image/x-icon">
   <meta name="description" content="Web Site Builder Description">
-  <title>DESIGN</title>
+  <title>Design</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-c" style="background-image: url(assets/images/untitled-3-2000x1125.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-c" style="background-image: url(assets/images/untitled-3-2000x1125.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(192, 163, 117);">
     </div>
@@ -1139,7 +1139,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons4-2k" style="background-image: url(assets/images/untitled-3-2000x11250.jpg); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons4-2k" style="background-image: url(assets/images/untitled-3-2000x11251.jpg); padding-top: 60px; padding-bottom: 60px;">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);">
     </div>
     <div class="container">
