--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x105.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Index</title>
+  <title>Home</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(192, 163, 117);"></div>
 
@@ -90,7 +90,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">ABOUT</h3>
-        <div class="lead"><p>Background image with solid color overlay and parallax effect. Develop fully responsive, mobile-ready websites that look amazing on any devices and browsers. Preview how your website will appear on phones, tablets and desktops directly in the visual editor.</p></div>
+        <div class="lead"><p>Graphic designer and photographer based out of Orange County, CA.</p></div>
     </div>
 
 </section>
@@ -330,7 +330,7 @@
             <div class="row">
                 <div class="col-xs-12 text-xs-center">
                     <h3 class="mbr-section-title display-2">CONTACT</h3>
-                    <small class="mbr-section-subtitle">For inquiries, please feel free to leave a message below.</small>
+                    <small class="mbr-section-subtitle">Get at me.</small>
                 </div>
             </div>
         </div>
@@ -348,7 +348,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="NyPRUsVo/s5Lzquyz9irPjzkmHSaj8SPM+1uDEm0JufK3jS2LvluTewBxeJHho84Qnad2b5m889MO5sJm1DXit1vjul/4s7qcL28uD26GVEga28V/1y/yNfDaXskja/b" data-form-email="true">
+                        <input type="hidden" value="M4Gj+ptIw/6kK+znbXVzWy37CWJGpvXJurKs8G3vSa8gVigcyNQSAO6cZj1qa5aUP0ubI8Vk6KdXDZP/cNsrojd9OftLdPSRLImb+E2PXROILyP2w4MYzjftrBIkRMxn" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
