create github pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x105.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Eric Fujimori | Design & Photography</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/img-1-2000x1498.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(192, 163, 117);"></div>
 
@@ -348,7 +348,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="M4Gj+ptIw/6kK+znbXVzWy37CWJGpvXJurKs8G3vSa8gVigcyNQSAO6cZj1qa5aUP0ubI8Vk6KdXDZP/cNsrojd9OftLdPSRLImb+E2PXROILyP2w4MYzjftrBIkRMxn" data-form-email="true">
+                        <input type="hidden" value="ewxsmyDtD1T3N8a80Yd/BCHj4W5qDXfGGBqZWBbi4pKXviSDTa7Ja2FguxgAq3j0OVSC5Z/9yuzk1VLfXE9Ou4bJ9bLa24R34zCpFXR6ZG0i1/kmBwxVNk4368Suf98V" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
