--- a/design.html
+++ b/design.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-c" style="background-image: url(assets/images/untitled-3-2000x1125.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-c" style="background-image: url(assets/images/untitled-3-2000x1125.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(192, 163, 117);">
     </div>
@@ -1139,7 +1139,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons4-2k" style="background-image: url(assets/images/untitled-3-2000x11254.jpg); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons4-2k" style="background-image: url(assets/images/untitled-3-2000x11256.jpg); padding-top: 60px; padding-bottom: 60px;">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);">
     </div>
     <div class="container">
